[package]
name = "d20"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/benbrandt/d20"
readme = "https://github.com/benbrandt/d20#readme"

[dependencies]
async-std = "1"
chrono = "0.4"
diesel = { version = "1", features = ["postgres", "extras"] }
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
http-service = "0.5"
jsonwebtoken = "7"
log = "0.4"
mime = "0.3"
r2d2 = "0.8"
r2d2_redis = "0.13"
rand = "0.7"
rand_pcg = "0.2"
regex = "1"
sentry = { version = "0.18", features = ["with_env_logger", "with_error_chain"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tide = { git = "https://github.com/http-rs/tide" }
