[package]
name = "d20"
version = "0.1.0"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/benbrandt/d20"
readme = "https://github.com/benbrandt/d20#readme"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
chrono = "0.4"
diesel = { version = "1", features = ["postgres", "extras"] }
dotenv = "0.15"
jsonwebtoken = "7"
r2d2 = "0.8"
r2d2_redis = "0.14"
rand = "0.8"
rand_pcg = "0.3"
regex = "1"
sentry = { version = "0.24", features = ["anyhow", "log"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tide = "0.16"
